--- a/composer.json
+++ b/composer.json
@@ -46,5 +46,6 @@
       "phpdbg -qrr vendor/bin/phpunit"
     ]
   },
-  "minimum-stability": "dev"
+  "minimum-stability": "dev",
+  "prefer-stable": true
 }
