--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
   "require": {
     "php": "^7.0",
     "tymon/jwt-auth": "^1.0",
-    "illuminate/support": "^7.8"
+    "illuminate/support": "^5.5|^6|^7"
   },
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^2.16",
