--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2
 jobs:
   test:
     docker:
-      - image: php:7.3
+      - image: php:8
     steps:
       - run:
           name: Install packages and PHP extensions
@@ -11,15 +11,18 @@ jobs:
             apt-get update
             apt-get install -y git libzip-dev unzip
             docker-php-ext-install zip
-      - checkout
       - run:
           name: Install composer
           command: curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/bin --filename=composer
       - run:
+          name: Install php-cs-fixer (global)
+          command: composer global require friendsofphp/php-cs-fixer --prefer-dist
+      - checkout
+      - run:
           name: Install dependencies
           command: composer install
       - run:
-          name: CS-Fixer
+          name: Check coding style by php-cs-fixer
           command: composer cs-fixer-check
       - run:
           name: PHPUnit
