--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "illuminate/support": "^5.5|^6|^7|^8"
   },
   "require-dev": {
-    "orchestra/testbench": "^5.1"
+    "orchestra/testbench": "^5.1|^6.0"
   },
   "autoload": {
     "psr-4": {
